--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.AppCompat"
         tools:targetApi="31">
         <activity
+            android:name=".place_info"
+            android:exported="false" />
+        <activity
             android:name=".NoticeDetailActivity"
             android:exported="false"
             android:label="@string/title_activity_detail"
