--- a/app/build.gradle
+++ b/app/build.gradle
@@ -86,8 +86,15 @@ dependencies {
     androidTestImplementation platform('androidx.compose:compose-bom:2022.10.00')
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+
+    implementation "com.kakao.sdk:v2-user:2.16.0"
+    //implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.27.0'
+    implementation fileTree(includes: ['*.jar'], dir: 'libs')
+    implementation files('libs/libDaumMapAndroid.jar')
+
 }
 
 configurations.implementation {
     exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
+
 }
