--- a/app/build.gradle
+++ b/app/build.gradle
@@ -92,6 +92,14 @@ dependencies {
     implementation fileTree(includes: ['*.jar'], dir: 'libs')
     implementation files('libs/libDaumMapAndroid.jar')
 
+
+    // kakao link
+    implementation "com.kakao.sdk:v2-share:2.11.2"
+    implementation "com.kakao.sdk:v2-user:2.4.2" // 카카오 로그인
+    implementation "com.kakao.sdk:v2-talk:2.4.2" // 친구, 메시지(카카오톡)
+    implementation "com.kakao.sdk:v2-story:2.4.2" // 카카오스토리
+    implementation "com.kakao.sdk:v2-link:2.4.2" // 메시지(카카오링크)
+    implementation "com.kakao.sdk:v2-navi:2.4.2" // 카카오내비
 }
 
 configurations.implementation {
